openapi.json fields created as expected
